# avie-cli

./: Cargo.toml  README.md
src/: main.rs  state.rs  uci.rs  ucispec.txt
