[package]
name = "avie-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
nom = "7"
avie-core = {git = "https://github.com/rubyr/avie-core.git", branch = "evaluation"}
